Make polls persistent